# Space_Invaders

./: .gitignore  CMakeLists.txt  Space_Invaders  Space_Invaders.pro
CMake/: CMakeLists.txt
include/: componentmanager.hpp  components.hpp  game.hpp  inputsystem.hpp  rendersystem.hpp  system.hpp  world.hpp
src/: collidesystem.cpp  game.cpp  iasystem.cpp  inputsystem.cpp  main.cpp  movementsystem.cpp  rendersystem.cpp  world.cpp
